--- a/index.html
+++ b/index.html
@@ -406,10 +406,10 @@
 <div class='type'>
 <p class='MegrimType'>Dell All-In-One <span class='Princess'> 100 - 108</span></p>
 </div>
+    
+    <!-- obsolete S1R4 was moved below S2 Dell AIO because of fitting -->
 
-<div class='type'>
-<p class='MegrimType'>Do Not Remove – Obsolete</p>
-</div>
+
 
 <br><br><br><br><br><br><br><br><br>
 
@@ -419,6 +419,10 @@
 
 <div class='type'>
 <p class='MegrimType'>Dell All-In-One <span class='Princess'> 109 - 129</span></p>
+</div>
+    
+    <div class='type'>
+<p class='MegrimType'>Do Not Remove – Obsolete</p>
 </div>
 
 <div class='type'>
